--- a/med9/basic-page/index.html
+++ b/med9/basic-page/index.html
@@ -9,14 +9,13 @@
 
 
 </head>
-<body>
-
+<body id="home">
 <nav>
 	<img src="hb.jpg" alt="hb">
-	<ul>
+<ul>
 		<li><a href="#info">Info</a></li>
-		<li><a href="#">Shop</a></li>
-		<li><a href="#">Contact</a></li>
+		<li><a href="#Contact.html">Contact</a></li>
+		<li><a href="#Amsterdam-flower">Amsterdam-flowers</a></li>
 	
 
 	</ul>
@@ -24,8 +23,9 @@
 
 
 <header>
-	<h1> Learn about flowers</h1>
+	<h1>Learn about flowers</h1>
 </header>
+
 <main id="info">
 	<h2>Discover the most famous flowers</h2>
 	<p>Here is a list</p>
@@ -43,6 +43,32 @@
 </main>
 
 
+<section id="tulips">
+<div class="left">
+<h2>The tulips</h2>	
+<p>
+	The most famous flowers in Amsterdam are tulips.
+</p>
+</div>
+<div class="right">
+	<h3>Example of a famous flower</h3>
+</div>
+</section>
+<section id="pictures">
+	<img src="images/flower1.jpg" >
+	<img src="images/flower2.jpg" >
+	<img src="images/flower3.jpg" >
+	<img src="images/flower4.jpg" >
+	<img src="images/flower5.jpg" >
+	<img src="images/flower6.jpg" >
+	<img src="images/flower7.jpg" >
+	<img src="images/flower8.jpg" >
+	<img src="images/flower9.jpg" >
+	<img src="images/flower10.jpg" >
+	
+
+</section>
+
 
 
 
@@ -52,10 +78,6 @@
 	<p>Year: 2022</p>
 	<p>Subject: Media</p>
 </footer>
- 
-
-
-
 
 </body>
 </html>
