--- a/med9/Projekt3/index.html
+++ b/med9/Projekt3/index.html
@@ -11,9 +11,9 @@
 	<nav>
 		<h1>Hudra'S Motorscycles</h1>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="products.html">Products</a></li>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Products</a></li>
 
 		</ul>
 	</nav>
